feat: Clean repository root and add professional README
- Remove temporary checkpoint and process files from repository root
- Create comprehensive README with proper attribution to Nathan Rice/Sibylline Software
- Add professional branding and research context
- Include system architecture diagram and statistical validation details
- Update .gitignore to prevent future process file commits
- Establish clean foundation for ML research collaboration

Research by Nathan Rice, Sibylline Software (sibylline.dev)

--- a/.gitignore
+++ b/.gitignore
@@ -522,3 +522,18 @@ config/*local*
 # Generated validation experiment data (keep documentation, exclude synthetic datasets)
 data/validation_experiment/*.json
 data/validation_experiment/sample_*.json
+
+# Process and checkpoint files - prevent accidental commits
+*_SUMMARY*.md
+*_SETUP*.md
+*_CLEANUP*.md
+*_PREPARATION*.md
+*_COMPLETE*.md
+*_READY*.md
+*_AUDIT*.md
+*_REPORT*.md
+*_STATUS*.md
+CHECKPOINT_*.md
+PROCESS_*.md
+TEMP_*.md
+WORKING_*.md
