Add research paper PDFs and LaTeX build infrastructure
- Built and included BEM research paper (paper.pdf) from LaTeX sources
- Added simplified version (simple_main.pdf) and full version (main.pdf)
- Created LaTeX dependency installation script (install_latex_deps.sh)
- Updated gitignore to allow paper PDFs in archive directory
- Fixed LaTeX compilation issues (microtype, natbib, missing packages)
- Paper demonstrates BEM methodology and includes comprehensive benchmarking

--- a/.gitignore
+++ b/.gitignore
@@ -397,6 +397,8 @@ yarn-error.log*
 
 # Archive directory (contains old/legacy files not needed in git)
 archive/
+# Exception: Include paper PDFs in archive
+!archive/paper/*.pdf
 
 # Backup files
 *.bak
